Programming exercises: Fix result processing for ocaml exercises (#8311)